[tool.poetry]
name = "da-fits-warp"
version = "2.1.2"
description = "Warp catalogues and images to remove the distorting affect of the ionosphere."
authors = ["Natasha Hurley-Walker, Paul Hancock, Tim Galvin"]
license = "Academic Free License v3.0"
readme = "README.md"
packages = [{include = "da_fits_warp"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.0"
astropy = "^5.2.1"
scipy = "^1.9.0"
dask = {extras = ["distributed"], version = "^2023.2.0"}
matplotlib = "^3.7.0"

[tool.poetry.scripts]
da_fits_warp = 'da_fits_warp.da_fits_warp:cli'

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
